Added basic game controls and physics

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
         <script src="../dist/index.js"></script>
 
         <script>
-            new jsWorkshop.Game($('#surface')).start();
+            new jsWorkshop.Game($(document), $('#surface')).start();
         </script>
     </body>
 </html>
